fix(business): chip-input label with whitespaces
do not allow whitespace label wrap, in order to stick to text-overflow with ellipsis standard

--- a/projects/sbb-esta/angular-business/chip/src/_chip.scss
+++ b/projects/sbb-esta/angular-business/chip/src/_chip.scss
@@ -25,6 +25,7 @@ $chip-min-width: 75;
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .sbb-chip-close-btn {
